--- a/stylesheets/components/_button.scss
+++ b/stylesheets/components/_button.scss
@@ -1,5 +1,25 @@
-.button {
-  background-color: $black;
+.index-columns .button {
+  font: inherit;
   color: $white;
+  background-color: $black;
+}
+
+.button {
+  font: inherit;
+  color: $white;
+  text-align: center;
   text-transform: uppercase;
+  background-color: $black;
+  border: 0;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: $on_cursor;
+  }
+
+  &:disabled {
+    background-color: $on_cursor;
+    cursor: not-allowed;
+  }
 }
