--- a/stylesheets/layout/_footer.scss
+++ b/stylesheets/layout/_footer.scss
@@ -1,15 +1,21 @@
 .page-footer {
-  background: $black url("../img/footer-background.png") 0 0 repeat;
+  background: #252525 url("../img/footer-background.png") 0 0 repeat;
 }
 
-.page-footer a {
+.footer-contacts a {
+  text-decoration: underline;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
+}
+
+.footer-contacts a,
+.footer-copyright a {
   color: $white;
 }
 
 .footer-social ul {
   list-style: none;
-}
-
-.footer-contacts a {
-  text-decoration: underline;
 }
