--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -13,5 +13,5 @@
 @import 'components/appointment';
 @import 'components/gallery';
 @import 'components/modal_login';
-@import 'components/map';
+@import 'components/modal_map';
 @import 'pages/inner';
