bug fixes, attempt №3

--- a/stylesheets/components/_appointment.scss
+++ b/stylesheets/components/_appointment.scss
@@ -2,9 +2,9 @@
   font: inherit;
   background-color: $input_background;
   border: 2px solid $black;
-}
 
-.appointment-item input:hover,
-.appointment-item input:focus {
-  border-color: $on_cursor;
+  &:hover,
+  &:focus {
+    border-color: $on_cursor;
+  }
 }
