--- a/stylesheets/layout/_grids.scss
+++ b/stylesheets/layout/_grids.scss
@@ -3,7 +3,7 @@
   background:
     url("../img/separator.png") 50% 50% no-repeat,
     url("../img/content-background.png") 0 0 repeat;
-  background-color: $content-background;
+  background-color: $content_background;
 }
 
 .index-columns h2 {
