--- a/stylesheets/utilities/_variables.scss
+++ b/stylesheets/utilities/_variables.scss
@@ -2,4 +2,9 @@ $black: #000000;
 $white: #ffffff;
 $content_background: #fcf9f6;
 $input_background: #f9f5f3;
-$on_cursor: #653d15
+$on_cursor: #653d15;
+$navigation_on_cursor: #242424;
+$footer_background: #252525;
+$map_background: #d3d3d3;
+$gallery_background: #d3d3d3;
+$disabled: rgba(0, 0, 0, 0.5);
