--- a/stylesheets/components/_modal_map.scss
+++ b/stylesheets/components/_modal_map.scss
@@ -2,5 +2,5 @@
   width: 768px;
   height: 560px;
   border: 7px solid $white;
-  background: #d3d3d3 url("../img/map.jpg") no-repeat;
+  background: $map_background url("../img/map.jpg") 50% 50% no-repeat;
 }
