--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -14,4 +14,9 @@
 @import 'components/gallery';
 @import 'components/modal_login';
 @import 'components/modal_map';
+@import 'components/page_title';
+@import 'components/breadcrumbs';
+@import 'components/filters';
+@import 'components/catalog';
+
 @import 'pages/inner';
