--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -18,5 +18,6 @@
 @import 'components/breadcrumbs';
 @import 'components/filters';
 @import 'components/catalog';
+@import 'components/catalog_item';
 
 @import 'pages/inner';
