--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -19,5 +19,6 @@
 @import 'components/filters';
 @import 'components/catalog';
 @import 'components/catalog_item';
+@import 'components/price';
 
 @import 'pages/inner';
