--- a/stylesheets/components/_breadcrumbs.scss
+++ b/stylesheets/components/_breadcrumbs.scss
@@ -1,12 +1,17 @@
 .breadcrumbs {
   list-style: none;
+}
 
-  a {
-    color: $black;
-    line-height: 20px;
+.breadcrumbs a {
+  color: $black;
+  line-height: 20px;
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
   }
 }
 
 .breadcrumbs-current {
-  color: #aba9a7;
+  color: $breadcrumbs_color;
 }
