--- a/stylesheets/components/_price.scss
+++ b/stylesheets/components/_price.scss
@@ -1,11 +1,3 @@
-.promo-title,
-.hair-products h2,
-.hair-products-list,
-.price-services,
-.about-us {
-  color:$black;
-}
-
 .promo-title {
   font-size: 48px;
   line-height: 48px;
@@ -23,13 +15,14 @@
   list-style: none;
 }
 
-.price-services table,
-.price-services td,
-.price-services tr {
-  border: 1px solid $black;
+.price-services table {
   border-collapse: collapse;
 }
 
-.price-services table tr td:nth-child(2) {
+.price-services td {
+  border: 1px solid $black;
+}
+
+.price-services td:nth-child(2) {
   text-align: center;
 }
