--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -14,11 +14,12 @@
 @import 'components/gallery';
 @import 'components/modal_login';
 @import 'components/modal_map';
-@import 'components/page_title';
 @import 'components/breadcrumbs';
 @import 'components/filters';
 @import 'components/catalog';
-@import 'components/catalog_item';
+@import 'components/pagination';
+@import 'components/product_info';
+@import 'components/product_photo';
 @import 'components/price';
 
 @import 'pages/inner';
