--- a/stylesheets/pages/_inner.scss
+++ b/stylesheets/pages/_inner.scss
@@ -1,3 +1,4 @@
 .inner-page {
-  background: $content_background;
+  color: $black;
+  background: $content_background url("../img/content-background.png") 0 0 repeat;
 }
