--- a/stylesheets/components/_filters.scss
+++ b/stylesheets/components/_filters.scss
@@ -5,30 +5,23 @@ fieldset {
 legend {
   font-size: 24px;
   line-height: 30px;
-  color: $black;
 }
 
-.filters ul,
-.pagination-list {
+.filters ul {
   list-style: none;
 }
 
 .filter-option label {
-  color: $black;
   line-height: 18px;
   cursor: pointer;
-
-  &:hover,
-  &:focus {
-    color: $on_cursor;
-  }
-}
-
-.filter-button {
-  font-size: 13px;
 }
 
 .filter-input:hover + label,
 .filter-input:focus + label {
   color: $on_cursor;
+}
+
+.filter-input:disabled + label {
+  cursor: not-allowed;
+  color: $disabled;
 }
