--- a/stylesheets/layout/_grids.scss
+++ b/stylesheets/layout/_grids.scss
@@ -4,9 +4,9 @@
     url("../img/separator.png") 50% 50% no-repeat,
     url("../img/content-background.png") 0 0 repeat;
   background-color: $content_background;
-}
 
-.index-columns h2 {
-  font-size: 30px;
-  line-height: 42px;
+  h2 {
+    font-size: 30px;
+    line-height: 42px;
+  }
 }
