--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -379,19 +379,16 @@ input[type=radio].visually-hidden {
 }
 
 .page-footer {
+  color: #ffffff;
   background: #252525 url("../img/footer-background.png") 0 0 repeat;
 }
 
 .footer-contacts a {
+  color: #ffffff;
   text-decoration: underline;
 }
 .footer-contacts a:hover, .footer-contacts a:focus {
   text-decoration: none;
-}
-
-.footer-contacts a {
-  color: #ffffff;
-  text-align: center;
 }
 
 .footer-copyright {
@@ -403,6 +400,9 @@ input[type=radio].visually-hidden {
   background-color: #ffffff;
 }
 
+.footer-social {
+  text-align: center;
+}
 .footer-social ul {
   list-style: none;
 }
@@ -412,7 +412,6 @@ input[type=radio].visually-hidden {
   background: url("../img/separator.png") 50% 50% no-repeat, url("../img/content-background.png") 0 0 repeat;
   background-color: #fcf9f6;
 }
-
 .index-columns h2 {
   font-size: 30px;
   line-height: 42px;
@@ -490,8 +489,8 @@ input[type=radio].visually-hidden {
 }
 
 .modal-authentication {
-  background: #fcf9f6 url("../img/content-background.png") 0 0 repeat;
   color: #000000;
+  background: #fcf9f6 url("../img/content-background.png") 0 0 repeat;
 }
 
 .modal-authentication h2 {
@@ -528,8 +527,6 @@ input[type=radio].visually-hidden {
 }
 
 .modal-map {
-  width: 768px;
-  height: 560px;
   border: 7px solid #ffffff;
   background: #d3d3d3 url("../img/map.jpg") 50% 50% no-repeat;
 }
@@ -546,14 +543,13 @@ input[type=radio].visually-hidden {
 
 .breadcrumbs a {
   color: #000000;
-  line-height: 20px;
 }
 .breadcrumbs a:hover, .breadcrumbs a:focus {
   text-decoration: underline;
 }
 
 .breadcrumbs-current {
-  color: #aba9a7;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 fieldset {
@@ -563,30 +559,25 @@ fieldset {
 legend {
   font-size: 24px;
   line-height: 30px;
-  color: #000000;
 }
 
-.filters ul,
-.pagination-list {
+.filters ul {
   list-style: none;
 }
 
 .filter-option label {
-  color: #000000;
   line-height: 18px;
   cursor: pointer;
-}
-.filter-option label:hover, .filter-option label:focus {
-  color: #653d15;
-}
-
-.filter-button {
-  font-size: 13px;
 }
 
 .filter-input:hover + label,
 .filter-input:focus + label {
   color: #653d15;
+}
+
+.filter-input:disabled + label {
+  cursor: not-allowed;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .catalog-list {
@@ -597,9 +588,6 @@ legend {
   background-color: #ffffff;
 }
 .catalog-item h3 {
-  display: flex;
-  flex-direction: column;
-  line-height: 18px;
   color: #000000;
 }
 
@@ -609,33 +597,29 @@ legend {
 
 .catalog-item-price span {
   background-color: #e5e5e5;
-  color: #000000;
+  text-align: center;
 }
 
-.pagination-item a {
+.pagination-list {
+  list-style: none;
+}
+
+.pagination-link {
   line-height: 18px;
   color: #ffffff;
   background-color: #000000;
 }
-.pagination-item a:hover, .pagination-item a:focus {
+.pagination-link:not(.current-link):hover, .pagination-link:not(.current-link):focus {
   background-color: #653d15;
 }
 
-.current-page a {
+.current-link {
   color: #000000;
   background-color: #ffffff;
 }
 
-.product-photo-preview, .kit-list {
+.kit-list {
   list-style: none;
-}
-
-.product-availability,
-.product-text,
-.kit-list,
-.product-price span,
-.product-info h3 {
-  color: #000000;
 }
 
 .product-article {
@@ -643,6 +627,7 @@ legend {
 }
 
 .product-price span {
+  text-align: right;
   background-color: #e5e5e5;
 }
 
@@ -651,12 +636,8 @@ legend {
   line-height: 30px;
 }
 
-.promo-title,
-.hair-products h2,
-.hair-products-list,
-.price-services,
-.about-us {
-  color: #000000;
+.product-photo-preview {
+  list-style: none;
 }
 
 .promo-title {
@@ -676,19 +657,21 @@ legend {
   list-style: none;
 }
 
-.price-services table,
-.price-services td,
-.price-services tr {
-  border: 1px solid #000000;
+.price-services table {
   border-collapse: collapse;
 }
 
-.price-services table tr td:nth-child(2) {
+.price-services td {
+  border: 1px solid #000000;
+}
+
+.price-services td:nth-child(2) {
   text-align: center;
 }
 
 .inner-page {
-  background: #fcf9f6;
+  color: #000000;
+  background: #fcf9f6 url("../img/content-background.png") 0 0 repeat;
 }
 
 /*# sourceMappingURL=main.css.map */
