--- a/stylesheets/components/_appointment.scss
+++ b/stylesheets/components/_appointment.scss
@@ -8,3 +8,12 @@
     border-color: $on_cursor;
   }
 }
+
+.index-columns .appointment{
+  width: 300px;
+}
+
+.appointment-info {
+  margin: 0;
+  margin-bottom: 15px;
+}
