--- a/stylesheets/components/_gallery.scss
+++ b/stylesheets/components/_gallery.scss
@@ -1,4 +1,16 @@
 .gallery-content {
+  height: 178px;
+  margin: 0;
+  margin-bottom: 35px;
   border: 7px solid $white;
   background-color: $gallery_background;
+}
+
+.gallery {
+  width: 300px;
+}
+
+.buttuns-galery {
+  display: flex;
+  justify-content: space-between;
 }
