--- a/stylesheets/components/_modal_map.scss
+++ b/stylesheets/components/_modal_map.scss
@@ -1,4 +1,5 @@
 .modal-map {
+  width: 783px;
   border: 7px solid $white;
   background: $map_background url("../img/map.jpg") 50% 50% no-repeat;
 }
