--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -21,5 +21,6 @@
 @import 'components/product_info';
 @import 'components/product_photo';
 @import 'components/price';
+@import 'components/contacts';
 
 @import 'pages/inner';
