--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -9,9 +9,10 @@ html {
 }
 
 body {
-  color: $white;
-  text-transform: uppercase;
+  min-width: 960px;
   font: 700 14px/24px "PT Sans Narrow", Arial, sans-serif;
+  text-transform: uppercase;
+  color: $white;
   background: $black url("../img/hair-salon.jpeg") 0 0 no-repeat;
 }
 
