--- a/stylesheets/components/_news.scss
+++ b/stylesheets/components/_news.scss
@@ -1,7 +1,23 @@
+.news {
+  width: 300px;
+}
+
 .news-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
-.news-item time {
-  text-transform: none;
+.news-item {
+  margin: 0;
+  margin-bottom: 25px;
+
+
+  time {
+    text-transform: none;
+  }
+
+  p {
+    margin: 0;
+  }
 }
