--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -1,11 +1,36 @@
 .page-header {
+  margin-bottom: 80px;
   font-size: 16px;
   line-height: 20px;
+}
+
+.header-navigation {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-logo {
+  order: 2;
+  width: 368px;
+  height: 153px;
+  align-self: center;
+}
+
+.header-navigation-wrapper {
+  order: 1;
+  padding-bottom: 60px;
   background-color: $black;
+}
+
+.header-navigation-wrapper .container {
+  display: flex;
+  justify-content: space-between;
 }
 
 .app-navigation,
 .user-navigation {
+  margin: 0;
+  padding: 0;
   list-style: none;
 
   a {
@@ -16,4 +41,12 @@
       background-color: $navigation_on_cursor;
     }
   }
+}
+
+.app-navigation {
+  width: 545px;
+}
+
+.user-navigation  {
+  width: 110px;
 }
