--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -10,6 +10,8 @@ html {
 
 body {
   min-width: 960px;
+  margin: 0;
+  padding: 0;
   font: 700 14px/24px "PT Sans Narrow", Arial, sans-serif;
   text-transform: uppercase;
   color: $white;
