--- a/stylesheets/components/_filters.scss
+++ b/stylesheets/components/_filters.scss
@@ -1,14 +1,38 @@
+.filters {
+  width: 175px;
+  height: 570px;
+}
+
 fieldset {
+  margin: 0;
+  padding: 0;
   border: 0;
+
+  &:first-of-type {
+    margin-bottom: 50px;
+  }
+
+  &:last-of-type {
+    margin-bottom: 30px;
+  }
 }
 
 legend {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 30px;
   font-size: 24px;
   line-height: 30px;
 }
 
 .filters ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
+
+  li {
+    margin-bottom: 15px;
+  }
 }
 
 .filter-option label {
