--- a/stylesheets/pages/_inner.scss
+++ b/stylesheets/pages/_inner.scss
@@ -1,4 +1,33 @@
 .inner-page {
   color: $black;
   background: $content_background url("../img/content-background.png") 0 0 repeat;
+
+  .page-header {
+    margin: 0;
+    margin-bottom: 50px;
+    background-color: $black;
+  }
+
+  .header-navigation {
+    flex-direction: row;
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
+
+  .header-logo {
+    order: 0;
+    align-self: auto;
+    width: 115px;
+    height: 0;
+    margin-right: 40px;
+  }
+
+  .app-navigation {
+    width: 510px;
+    margin:0;
+  }
+
+  .user-navigation {
+    margin-left: auto;
+  }
 }
